--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
