--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "socket.io": "^4.8.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
